--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
 </head>
 <body>
     <main class="main-content">
-        
+        <div id="basicChallenges">
+            <h3>Basic JS Challenges</h3>
+            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
+            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+        </div>
+        <div id="arrayAndObjectsChallenges">
+            <h3>Array & Objects JS Challenges</h3>
+            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
+            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+        </div>
+        <div id="sortingChallenges">
+            <h3>Sorting JS Challenges</h3>
+            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
+            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+        </div>
+        <div id="timeComplexityChallenges">
+            <h3>Time Complexity JS Challenges</h3>
+            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
+            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+        </div>
     </main>
+    <script src="./JS/app.js"></script>
+    <!-- <script src="./JS/Basic/palindrome.js"></script> -->
 </body>
 </html>
