--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         </div>
         <div id="arrayAndObjectsChallenges">
             <h3>Array & Objects JS Challenges</h3>
-            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
-            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+            <p>Click For The <span id="primeNumberChallenge1">Prime Numbers Challenge</span></a></p>
+            <p>Click For The <span id="arrayReversingChallenge">Array Reversing Challenge</span></a></p>
+            <p>Click For The <span id="inPlaceArrayReversingChallenge">InPlace Array Reversing Challenge</span></a></p>
         </div>
         <div id="sortingChallenges">
             <h3>Sorting JS Challenges</h3>
