--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </div>
         <div id="sortingChallenges">
             <h3>Sorting JS Challenges</h3>
-            <p>Click For The <span id="primeNumberChallenge">Prime Numbers Challenge</span></a></p>
-            <p>Click For The <span id="palindromeChallenge">Palindrome Challenge</span></a></p>
+            <p>Click For The <span id="customSortingChallenge">Custom Sorting Challenge</span></a></p>
         </div>
         <div id="timeComplexityChallenges">
             <h3>Time Complexity JS Challenges</h3>
