Formatted Array Challenge

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <p>Click For The <span id="primeNumberChallenge1">Prime Numbers Challenge</span></a></p>
             <p>Click For The <span id="arrayReversingChallenge">Array Reversing Challenge</span></a></p>
             <p>Click For The <span id="inPlaceArrayReversingChallenge">InPlace Array Reversing Challenge</span></a></p>
+            <p>Click For The <span id="formattedArrayChallenge">Formatted Array Challenge</span></a></p>
         </div>
         <div id="sortingChallenges">
             <h3>Sorting JS Challenges</h3>
